src/test/compile-fail/variants_with_same_name.mmtn
// { "compile_status": "fail" }

enum Foo {
    Bar(u64),
    Bar(u64),
}

fn main() -> u64 {
    0
}
